# Cache_aware_post_training

./: .gitignore  PORT_TO_SLIME.md  README.md  pyproject.toml
configs/: qwen3_30b_a3b_6gpu.yaml  qwen3_30b_a3b_8gpu.yaml
docs/: loss_and_reward_reference.md
eval/baselines/: __init__.py  run_baselines.py
scripts/: install_externals.sh  launch_train.sh  load_qwen3_30b_a3b_real.py  quickstart.sh  run_train.py  setup_env.sh  single_gpu_real_megatron.py  single_gpu_real_qwen3.py  single_gpu_real_sglang_patch.py  single_gpu_real_slime.py  single_gpu_smoke.py
slime_adapter/: README.md  pyproject.toml
slime_adapter/configs/: qwen3_30b_a3b_8x5090.py  qwen3_30b_a3b_debug.py
slime_adapter/src/slime_adapter/: __init__.py  spec.py
slime_adapter/src/slime_adapter/controller/: __init__.py  cache_state.py  credits.py  expert_set_encoder.py  ste.py  switch_head.py
slime_adapter/src/slime_adapter/data/: __init__.py  prompt_loader.py
slime_adapter/src/slime_adapter/loss/: __init__.py  chunk_consistency.py  penalty_loss.py
slime_adapter/src/slime_adapter/megatron_hooks/: __init__.py  budget.py  compute_topk_patch.py  driver.py  moe_forward_patch.py
slime_adapter/src/slime_adapter/modeling/: __init__.py  _base.py  _registry.py  lora.py
slime_adapter/src/slime_adapter/modeling/qwen3_moe/: __init__.py  adapter.py
slime_adapter/src/slime_adapter/rollout/: __init__.py  generate.py  mix_generate.py  reward_kl.py
slime_adapter/src/slime_adapter/sglang_patches/: __init__.py  moe_select_patch.py  request_state.py  weight_sync.py
slime_adapter/src/slime_adapter/utils/: __init__.py  tb_logger.py
slime_adapter/tests/: test_batched_cache.py  test_controller_core.py  test_integration_mock.py  test_lora.py  test_p_mix.py  test_real_megatron_e2e.py  test_real_qwen3_e2e.py  test_real_sglang_e2e.py  test_real_slime_e2e.py  test_real_slime_routing_replay.py  test_switch_head_deepsets.py
